Fixed that horrible salmon color

--- a/media/css/gus.css
+++ b/media/css/gus.css
@@ -101,7 +101,7 @@
 	}
 	/* 2 column left menu settings */
 	.leftmenu {
-	    background:#FFD8B7;
+	    background:#A3C2FF;
 	}
     .leftmenu .colright {
         float:left;
