Added sidebar top and bottom blocks

--- a/views/base.html
+++ b/views/base.html
@@ -40,13 +40,27 @@
 				</div> 
 				<div class="col2"> 
 					{% block sidebar %}
+					
+					{% block sidebar_top %}
+					{% endblock %}
+
+					<br><hr/>
+					
+					{% block sidebar_sitewide %}
 					[SIDEBAR(tm)]<br/>Coming Soon<hr/>
 					<a href="http://test.joranbeasley.com/project_management/index.php?m=projects&a=view&project_id=1&tab=0" target="blank">Project Status</a><br>
 					<a href="http://test.joranbeasley.com/coverage_report/">Current Coverage</a><br>
 					<a href="http://test.joranbeasley.com/api/">Api Documentation</a><br>
 					<a href="https://github.com/arkenflame/gus">GitHub</a>
+					{% endblock %}
+					
+					<br><hr/>
+
+					{% block sidebar_bottom %}
+					{% endblock %}
 					
 					{% endblock %}
+
 				</div> 
 			</div> 
 		</div>
