Updated emailer sidebar on all pages

--- a/views/email/check.html
+++ b/views/email/check.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "email/emailer.html" %}
 {% block pagetitle %}Email{% endblock pagetitle %}
 
 {% block content %}
