--- a/views/email/sent.html
+++ b/views/email/sent.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "email/emailer.html" %}
 {% block content %}
 Thanks for sending an email!  The following message was posted:
 <p/>
