--- a/views/email/index.html
+++ b/views/email/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "email/emailer.html" %}
 {% block content %}
 {% if user_to %}
 <h3>CONTACT: {{user_to.username}} <a href="mailto:{{user_to.email}}">&lt;{{user_to.email}}&gt;</h3></a>
@@ -13,3 +13,8 @@
 {% block pagetitle %}
 Email
 {% endblock pagetitle %}
+
+{% block sidebar_top %}
+<a href="/email/check">Check Messages</a><br>
+<a href="/email/send">New Message</a>
+{% endblock %}
