Prevented display of MIME headers

--- a/views/email/check.html
+++ b/views/email/check.html
@@ -7,7 +7,7 @@
 {% for email in emails %}
 <b>From:</b> <br> {{ email.from_email|urlize }} <br>
 <b>Subject:</b> <br> {{ email.subject|urlize }} <br>
-<b>Message:</b> <br> {{ email.message|urlize|linebreaks }} <br>
+<b>Message:</b> <br> {{ email.body|urlize|linebreaks }} <br>
 <hr>
 <p/>
 {% endfor %}
