Can add/remove bills for users only when owner of group, users view all bills for each group they are in

--- a/views/bill/index.html
+++ b/views/bill/index.html
@@ -7,9 +7,16 @@
 {% if not bills %}
   No Bills.
 {% endif %}
+
+<table>
 {% for bill in bills %}
-  {{bill}}
+  <tr>
+  <th>{{bill.group.group_name|capfirst}}</th></tr>
+  <td></td>
+  <td>{{bill}}</td>
+  </tr>
 {% endfor %}
+</table>
 </p>
 
 <p>
@@ -19,8 +26,8 @@
   <th>{{group.group_name|capfirst}} [<a  href='/bill/Add/{{group.id}}/'>Add</a>]</th></tr>
   {% for bill in group.my_bills %}<tr>
     <td> </td>
-    <td>{{bill}} [<a href='/bill/'>Delete</a>]</td>
-     </tr>
+    <td>{{bill}} [<a href='/bill/Delete/{{bill.id}}'>Delete</a>]</td>
+    </tr>
   {% endfor %}
 {% endfor %}
 </table>
