Can access bills from the main page now.

--- a/views/base.html
+++ b/views/base.html
@@ -15,6 +15,7 @@
 				<li><a href="/gus_test/">Manage Groups/Users</a></li>
 				<li><a href="/calendar/">Calendar</a></li>
 				<li><a href="/email/">Email</a></li>
+				<li><a href="/bill/"><Bill></a></li>
 				<!--><li></li>
 				<li></li>
 				<li></li>-->
