--- a/views/forum/forums.html
+++ b/views/forum/forums.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-{{group}.group_name} : Forums 
+{{group.group_name}} : Forums 
 {% endblock pagetitle %}
 
 {% block content %}
@@ -9,12 +9,12 @@
  |Forum Name          | Last Post on ?/??/?? |
  |Description         | by User              |
 --------------------------------------------->
-<a href="/add_forum">Add Forum</a>
+<a href="/forum/{{group.id}}/add_forum">Add Forum</a>
 
 <table>
 {% for forum in forums %}
 	<tr>
-	 <td><b><a href="/{{forum.forum_name}}/threads">{{forum.forum_name}}</a></b><br />
+	 <td><b><a href="/forum/{{forum.forum_name}}/threads">{{forum.forum_name}}</a></b><br />
 	  <p>{{forum.forum_description}}</p></td> 
 	 <td><a href="">Last Post on ?/??/??</a><br />
 	  by <a href="">User</a></td>
