Forums work well enough now. Type /forum/GroupID/ to get to them.

--- a/views/forum/add_post.html
+++ b/views/forum/add_post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-{{group.group_name} : {{posts[0].thread.forum.forum_name}} : {{posts[0].thread.thread_name}} : Posts : New Post
+{{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : Posts : New Post
 {% endblock pagetitle %}
 
 {% block content %}
