--- a/views/forum/add_thread.html
+++ b/views/forum/add_thread.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-{{group.group_name}} : {{threads[0].forum.forum_name}} : Threads : New Thread
+{{group.group_name}} : {{forum.forum_name}} : Threads : New Thread
 {% endblock pagetitle %}
 
 {% block content %}
