--- a/views/forum/threads.html
+++ b/views/forum/threads.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-{{threads[0].group.group_name}} : {{threads[0].forum.forum_name}} : Threads
+{{group.group_name}} : {{forum.forum_name}} : Threads
 {% endblock pagetitle %}
 
 {% block content %}
@@ -9,12 +9,12 @@
 	 |Thread Name          | Last Post on ?/??/?? |
 	 |Thread Creator       | by User              |
 	---------------------------------------------->
-<a href="/add_thread">New Thread</a>
+<a href="/forum/{{group.id}}/{{forum.id}}/add_thread">New Thread</a>
 
 <table>
 {% for thread in threads %}
 	<tr>
-	 <td><b><a href="">{{thread.thread_name}}</a></b><br />
+	 <td><b><a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">{{thread.thread_name}}</a></b><br />
 	  <p>{{thread.thread_user.get_full_name}}</p></td> 
 	 <td><a href="">Last Post on ?/??/??</a><br />
 	  by <a href="">User</a></td>
