--- a/views/forum/posts.html
+++ b/views/forum/posts.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-{{posts[0].thread.group.group_name}} : {{posts[0].thread.forum.forum_name}} : {{posts[0].thread.thread_name}} : Posts
+{{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : Posts
 {% endblock pagetitle %}
 
 {% block content %}
@@ -10,7 +10,7 @@
 	 ---------------------------------------------
 	 |Post Text                                  |
 	--------------------------------------------->
-<a href="/add_post">Post Reply</a>
+<a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}/add_post">Post Reply</a>
 
 <table>
 {% for post in posts %}
