--- a/views/base.html
+++ b/views/base.html
@@ -49,7 +49,10 @@
 					
 					{% block sidebar_sitewide %}
 					[SIDEBAR(tm)]<br/>Coming Soon<hr/>
-					<a href="http://guspy.joranbeasley.com/reports/index.html">GusPy Reports</a>
+					<a href="http://test.joranbeasley.com/project_management/index.php?m=projects&a=view&project_id=1&tab=0" target="blank">Project Status</a><br>
+					<a href="http://test.joranbeasley.com/coverage_report/">Current Coverage</a><br>
+					<a href="http://test.joranbeasley.com/api/">Api Documentation</a><br>
+					<a href="https://github.com/arkenflame/gus">GitHub</a>
 					{% endblock %}
 					
 					<br><hr/>
