Added a link to the image galleries in base.html, fixed minor markup issues in base.html

--- a/views/base.html
+++ b/views/base.html
@@ -15,10 +15,10 @@
 				<li><a href="/gus_test/">Manage Groups/Users</a></li>
 				<li><a href="/calendar/">Calendar</a></li>
 				<li><a href="/email/">Email</a></li>
-				<li><a href="/bill/"><Bill></a></li>
-				<!--><li></li>
+				<li><a href="/bill/">Bill</a></li>
+				<li><a href="/gallery/">Gallery</a></li>
 				<li></li>
-				<li></li>-->
+				<li></li>
 			</ul>
 			{% endblock %}
 			{% block submenu %}
