--- a/views/gallery/gallery_add.html
+++ b/views/gallery/gallery_add.html
@@ -7,6 +7,7 @@
 <form action="" method="post">
   {{gallery_form.as_p}}
   {% csrf_token %}
-  <input type="submit" value="Add"/>
+  <input type="submit" value="Create Gallery"/>
 </form>
+<a href="/gallery">Cancel</a>
 {% endblock %}
