Images now display correctly in image galleries.

--- a/views/gallery/gallery_view.html
+++ b/views/gallery/gallery_view.html
@@ -12,7 +12,7 @@ Created by: <a href="#">{{gallery.user.username}}</a> on {{gallery.date_created|
   <a href="/gallery/image/delete/{{i.id}}">Delete</a>]
   <br/>
   
-  <img src="{{MEDIA_URL}}{{i.image.url}}"/>
+  <img src="{{i.image.url}}"/>
   <br/>
 
   {{i.description}}
