More forum stuff done! Deleting works, editing does not, no idea why...

--- a/views/forum/forums.html
+++ b/views/forum/forums.html
@@ -5,19 +5,21 @@
 {% endblock pagetitle %}
 
 {% block content %}
-<!--------------------------------------------
- |Forum Name          | Last Post on ?/??/?? |
- |Description         | by User              |
---------------------------------------------->
-<a href="/forum/{{group.id}}/add_forum">Add Forum</a>
+<!-----------------------------------------------------------
+ |Forum Name          | Last Post on ?/??/?? | Edit Forum   |
+ |Description         | by User              | Delete Forum |
+ ----------------------------------------------------------->
+<a href="/forum/{{group.id}}/add_forum">Add Forum</a> 
 
-<table>
+<table border="1" cellpadding="6">
 {% for forum in forums %}
 	<tr>
 	 <td><b><a href="/forum/{{group.id}}/{{forum.id}}">{{forum.forum_name}}</a></b><br />
 	  <p>{{forum.forum_description}}</p></td> 
-	 <td><a href="">Last Post on ?/??/??</a><br />
-	  by <a href="">User</a></td>
+	 <td>Last Post on <a href="/forum/{{group.id}}/{{forum.id}}/{{forum.LastPostThread.id}}">{{forum.LastPostDate}}</a><br />
+	  by <a href="">{{forum.LastPostUser.username|capfirst}}</a></td>
+	 <td> <a href="/forum/{{group.id}}/{{forum.id}}/edit_forum">Edit Forum</a><br /> 
+	  <a href="/forum/{{group.id}}/{{forum.id}}/delete_forum">Delete Forum</a>
 	</tr>
 {% endfor %}
 </table>
