Minor Forum Fixes

--- a/views/forum/edit_post.html
+++ b/views/forum/edit_post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-{{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : {{post.user..username|capfirst}}'s post : Edit Post
+{{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : {{post.user.username|capfirst}}'s post : Edit Post
 {% endblock pagetitle %}
 
 {% block content %}
