--- a/views/calendar/day_view.html
+++ b/views/calendar/day_view.html
@@ -7,7 +7,7 @@ method="POST">
 {% csrf_token %}
 {{event_form.as_p}}
 
-<input type="submit" value="save">
+<input type="submit" value="Save">
 </form>
 
 {% endblock content %}
