Added custom header support

--- a/views/base.html
+++ b/views/base.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title>{% block pagetitle %}gus{% endblock %}</title>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		{% comment %} <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> {% endcomment %}
+		{% block custom_header %}
+		{% endblock %}
 		<link rel="stylesheet" type="text/css" href="/include/css/gus.css"/>
 	</head>
 	<body>
