fixed some aesthetic issues

--- a/views/calendar/add_event.html
+++ b/views/calendar/add_event.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Events</h4>
+<h4>Add New Event</h4>
 
 <form action="/calendar/{{year}}/{{month_name}}/_add{{day}}/"
 method="POST">
@@ -14,5 +14,5 @@ method="POST">
 {% endblock content %}
 
 {% block pagetitle %}
-Calendar-Add Event
+gus Calendar-Add Event
 {% endblock pagetitle %}
