--- a/views/calendar/day_edit_view.html
+++ b/views/calendar/day_edit_view.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h4>Events</h4>
+<h4>Edit Event</h4>
 
 <form action="/calendar/{{year}}/{{month_name}}/_edit{{day}}/{{event_id}}/"
 method="POST">
@@ -13,5 +13,5 @@ method="POST">
 {% endblock content %}
 
 {% block pagetitle %}
-Calendar-Edit Event
+gus Calendar-Edit Event
 {% endblock pagetitle %}
