Added user email verification and error handling

--- a/views/email/error.html
+++ b/views/email/error.html
@@ -2,7 +2,9 @@
 {% block pagetitle %}Email - Error{% endblock pagetitle %}
 
 {% block custom_header %}
+{% if refresh %}
 <meta http-equiv="refresh" content="0" />
+{% endif %}
 {% endblock %}
 
 {% block content %}
