Added Delete Role though it has issues. Also, worked on superUser checkbox though it refuses work

--- a/views/groups/manageGroup.html
+++ b/views/groups/manageGroup.html
@@ -9,6 +9,9 @@
 [
   <a href="/gus_test/Role/Edit/{{ role.id }}/">Edit Role</a>
 ]
+[
+  <a href="/gus_test/Role/Delete/{{ role.id }}/{{ group.id }}/">Delete Role</a>
+]
 <br />
 {{ role.permissionsString }} <br />
 {% for user in role.users.all %}
