--- a/views/email/index.html
+++ b/views/email/index.html
@@ -8,6 +8,9 @@
 {{ email_form.as_p }}
 <input type="submit" value="Send">
 </form>
+
+{{ user_list }}
+
 {% endblock content %}
 
 {% block pagetitle %}
