fixed header image rollover

--- a/media/css/gus.css
+++ b/media/css/gus.css
@@ -11,10 +11,19 @@
 	a {
     	color:#369;
 	}
+	
+	
 	a:hover {
 		color:#fff;
 		background:#369;
 		text-decoration:none;
+	}
+	a.header_image{
+		text-decoration:none;
+		outline:none;
+		background:none;
+		
+		
 	}
     h1, h2, h3 {
         margin:.8em 0 .2em 0;
