--- a/views/forum/add_forum.html
+++ b/views/forum/add_forum.html
@@ -4,12 +4,15 @@
 {{group.group_name}} : Forums : Add Forum
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a> <br />
+{% endblock %}
 
+{% block content %}
 <form method="POST">
  {%csrf_token%}
  {{form.as_p}}
  <input type="SUBMIT" value="Create Forum">
 </form>
-
 {% endblock content %}
