--- a/views/forum/add_thread.html
+++ b/views/forum/add_thread.html
@@ -4,12 +4,16 @@
 {{group.group_name}} : {{forum.forum_name}} : Threads : New Thread
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a><br />
+<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
+{% endblock %}
 
+{% block content %}
  <form method="POST">
   {%csrf_token%}
   {{form.as_p}}
   <input type="SUBMIT" value="Create Thread">
  </form>
-
 {% endblock content %}
