--- a/views/forum/delete_forum.html
+++ b/views/forum/delete_forum.html
@@ -4,6 +4,10 @@
 {{group.group_name}} : {{forum.forum_name}} : Delete Forum
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a> <br />
+{% endblock %}
 
+{% block content %}
 {% endblock content %}
