--- a/views/forum/delete_post.html
+++ b/views/forum/delete_post.html
@@ -4,6 +4,12 @@
 {{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : {{post.user.username|capfirst}}'s Post : Delete Post
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a><br />
+<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
+<a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">Return to Posts</a><br />
+{% endblock %}
 
+{% block content %}
 {% endblock content %}
