--- a/views/forum/delete_thread.html
+++ b/views/forum/delete_thread.html
@@ -4,6 +4,11 @@
 {{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : Delete Thread
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a><br />
+<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
+{% endblock %}
 
+{% block content %}
 {% endblock content %}
