--- a/views/forum/edit_forum.html
+++ b/views/forum/edit_forum.html
@@ -4,12 +4,15 @@
 {{group.group_name}} : {{forum.forum_name}} : Edit Forum
 {% endblock pagetitle %}
 
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a> <br />
+{% endblock %}
+
 {% block content %}
-
-	<form method="POST">
-	 {%csrf_token%}
-	 {{form.as_p}}
-	 <input type="SUBMIT" value="Save">
-	</form>
-
+<form method="POST">
+ {%csrf_token%}
+ {{form.as_p}}
+ <input type="SUBMIT" value="Save">
+</form>
 {% endblock content %}
