--- a/views/forum/edit_post.html
+++ b/views/forum/edit_post.html
@@ -4,12 +4,17 @@
 {{group.group_name}} : {{forum.forum_name}} : {{thread.thread_name}} : {{post.user.username|capfirst}}'s post : Edit Post
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a><br />
+<a href="/forum/{{group.id}}/{{forum.id}}">Return to Threads</a><br />
+<a href="/forum/{{group.id}}/{{forum.id}}/{{thread.id}}">Return to Posts</a><br />
+{% endblock %}
 
+{% block content %}
  <form method="POST">
   {%csrf_token%}
   {{form.as_p}}
   <input type="SUBMIT" value="Save">
  </form>
-
 {% endblock content %}
