--- a/views/forum/threads.html
+++ b/views/forum/threads.html
@@ -4,9 +4,13 @@
 {{group.group_name}} : {{forum.forum_name}} : Threads
 {% endblock pagetitle %}
 
-{% block content %}
+{% block sidebar_top %}
+<a href="/group/{{group.id}}">Return to Group</a><br />
+<a href="/forum/{{group.id}}">Return to Forums</a> <br />
 <a href="/forum/{{group.id}}/{{forum.id}}/add_thread">New Thread</a>
+{% endblock %}
 
+{% block content %}
 <table border="1" cellpadding="6">
 {% for thread in threads %}
 	<tr>
