--- a/views/base.html
+++ b/views/base.html
@@ -26,10 +26,10 @@
     <div class="topbar">
         {% block menu %}
             <a href="/gus_test/">Manage Groups and Users</a> | 
-            <a href="/calendar/">Calendar</a> | 
-            <a href="/email/">Email</a> | 
-            <a href="/bill/">Bill</a> | 
-            <a href="/gallery/">Gallery</a>
+            <a href="/calendar/">My Calendar</a> | 
+            <a href="/email/">My Messages</a> | 
+            <a href="/bill/">My Bills</a> | 
+            <a href="/gallery/">My Galleries</a>
         {% endblock %}
     </div>
 
