fixed propgating groups bugs

--- a/views/calendar/month_view.html
+++ b/views/calendar/month_view.html
@@ -15,7 +15,7 @@
         
         {% if not month.current %} 
                 <!--{% if month.event %}<b>{% endif %}-->
-                <td onmouseover=this.style.backgroundColor><a href="/calendar/{{year}}/{{month.name}}/"><center>{{ month.name }}</center></a></td>
+                <td> <a href="/calendar/{{year}}/{{month.name}}/"><center>{{ month.name }}</center></a></td>
         {% endif %}
                 
                 <!--{% if month.event %}</b>{% endif %}<-->
@@ -45,7 +45,7 @@
 
     {% for week in month_days %}
         <tr>
-        {% for day, total_day_events, current in week %}
+        {% for day, events, current in week %}
 
     
             <td height="70" width="65"
@@ -60,7 +60,7 @@
               {% if day != 0 %}
                 {{ day }}
                 <br>
-               {% for events in total_day_events %}
+               
                {% if events|length > 2 %} 
                   {% for event in events|slice:":1" %}
                   <b><a href="/calendar/{{year}}/{{month_name}}/{{day}}/{{event.pk}}/">{{ event.event_name }}</a></b>
@@ -75,7 +75,7 @@
                     <p> 
                {% endfor %}
                {% endif %}
-               {% endfor %}
+               
                {% endif %}
               
             </td>
